# Insurance-Risk-Analytics-and-Predictive-Modeling

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
config/: settings.py
data/processed/: .gitignore  fully_processed_insurance_data.csv.dvc  processed_insurance_data.csv.dvc
docs/source/: conf.py  index.rst  installation.rst  limitations_future_work.rst  modules.rst  overview.rst  project_structure.rst  src.models.rst  src.rst  src.services.rst  src.utils.data_preparation.rst  src.utils.eda.rst  src.utils.hypothesis_testing.rst  src.utils.rst  usage.rst
notebooks/: EDA.ipynb  Hypothesis_Testing.ipynb  Predictive_Modeling.ipynb
scripts/: data_ingestion.py
src/models/: decision_tree_strategy.py  linear_regression_strategy.py  model_evaluator.py  model_interpreter.py  model_trainer.py  random_forest_strategy.py
src/utils/: data_loader.py  data_preprocessing.py  ingest_data.py
src/utils/data_preparation/: feature_engineer.py  preprocessor.py
src/utils/eda/: basic_data_inspection.py  bivariate_analysis.py  data_summarization.py  missing_values_analysis.py  multivariate_analysis.py  outlier_analysis.py  temporal_analysis.py  univariate_analysis.py
src/utils/hypothesis_testing/: base_strategy.py  chi_squared_test.py  hypothesis_tester.py  metrics_calculator.py  t_test.py
tests/unit/: test_chi_squared_test.py  test_data_loader.py  test_data_preprocessing.py  test_data_summarization.py  test_metrics_calculator.py  test_model_evaluator.py  test_t_test.py
