[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Insurance-Risk-Analytics-and-Predictive-Modeling" 
version = "0.1.0"
description = "End-to-End Insurance Risk Analytics & Predictive Modeling" 
requires-python = ">=3.8"
keywords = ["python", "project", "template"] 
authors = [
  { name = "Mikias Worku", email = "mikias27worku@gmail.com" },
]
license = { file = "LICENSE" } # Create a LICENSE file if needed
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/michaWorku/Insurance-Risk-Analytics-and-Predictive-Modeling" 
"Bug Tracker" = "https://github.com/michaWorku/Insurance-Risk-Analytics-and-Predictive-Modeling/issues" 

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages in src/
